plugins {
	id 'org.springframework.boot' version '2.4.1'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'com.somedman'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'oauth.signpost', name: 'signpost-core', version: '2.1.1'
	implementation group: 'oauth.signpost', name: 'signpost-commonshttp4', version: '2.1.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
	// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime
	implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.3'


	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
}
